# django-test

./: .env.example  .gitignore  Dockerfile  base.yaml  docker-compose.yaml  manage.py  pyproject.toml  start.sh
.github/workflows/: ci.yml  linting.yml
apps/common/: authentication.py  helpers.py  storage.py  tests.py  views.py
apps/tasks/: apps.py  documents.py  elasticsearch_documents.py  factories.py  models.py  receivers.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
apps/tasks/management/commands/: generate_tasks.py  generate_timelogs.py  generate_users.py  init_es.py
apps/tasks/migrations/: 0001_initial.py  0002_comment.py  0003_comment_created_at_comment_updated_at_and_more.py  0004_timelog.py  0005_attachment.py
apps/tasks/models/: comments.py  tasks.py  time_logs.py
apps/tasks/serializers/: comments.py  tasks.py  time_logs.py
apps/tasks/services/: email_service.py  task_service.py
apps/tasks/templates/emails/: base_email.html  task_assigned.html  task_commented.html  task_completed.html  top_tasks_by_logged_time.html
apps/tasks/tests/: test_api.py  test_celery_tasks.py  test_comments_api.py  test_email_service.py  test_search_api.py  test_tasks_api.py  test_time_logs_api.py
apps/tasks/views/: attachments.py  comments.py  search.py  tasks.py  time_logs.py
apps/users/: factories.py  serializers.py  tests.py  urls.py  views.py
apps/users/tests/: test_users_api.py
config/: asgi.py  celery.py  settings.py  test_settings.py  urls.py  wsgi.py
tms/: asgi.py  celery.py  settings.py  test_settings.py  urls.py  wsgi.py
tms/common/: apps.py  tests.py  urls.py  validators.py  views.py
tms/tasks/: urls.py
tms/tasks/migrations/: 0001_initial.py  0002_comment.py
tms/tasks/models/: comments.py  tasks.py
tms/tasks/serializers/: __init__.py  comments.py  tasks.py
tms/tasks/services/: email_service.py
tms/tasks/views/: comments.py  tasks.py
tms/users/: apps.py  serializers.py  urls.py  views.py
