[project]
name = "venv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage~=7.6",
    "django~=4.2",
    "django-cors-headers~=4.4",
    "django-environ>=0.12.0",
    "django-filter>=25.1",
    "django-redis>=6.0.0",
    "djangorestframework~=3.15",
    "djangorestframework-simplejwt~=5.3",
    "drf-spectacular~=0.27",
    "factory-boy>=3.3.3",
    "parameterized>=0.9.0",
    "pre-commit~=4.2",
    "psycopg[binary]>=3.1",
    "python-dateutil>=2.9.0.post0",
    "ruff==0.12.7",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "ASYNC",
    "T10",
    "ISC",
    "ICN",
    "PIE",
    "BLE",
    "SIM",
    "PTH",
    "FIX",
    "N",
    "UP",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"test_settings.py" = ["F403", "F405"]
